--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -5,6 +5,11 @@
   <img 
     src="{{ site.logourl | prepend: site.baseurl | prepend: site.url }}"
     alt="{{ site.title }}" />
+
+  <div class="logo-content">
+    <h1>{{ site.title }}</h1>    
+    <h3>{{ site.tagline }}</h3>  
+  </div>
 </a>
 {% endif %}
 {% endcapture %}{{ logo | strip_newlines }}
