--- a/assets/css/_sass/helpers/_variables.scss
+++ b/assets/css/_sass/helpers/_variables.scss
@@ -38,7 +38,7 @@ $gray-lighter:           lighten(#000, 93.5%); // #eee
  * Theme colors
  */
 
-$color-1: #017785;
+$color-1: #3a5795;
 $color-2: #E84D5B;
 
 
@@ -47,6 +47,7 @@ $color-2: #E84D5B;
  */
 
 $color-white: #FFFFFF; 
+$color-black: #000000; 
 
 
 /*
