--- a/_layouts/live.html
+++ b/_layouts/live.html
@@ -1,19 +1,17 @@
 ---
 layout: default
 ---
+{% include breadcrumb.html %}
 <div class="post">
-  <div class="post-content">
+  <div class="header-title">
     <h2>{{ page.title }}</h2>
-    
+  </div>
+  <div class="post-content">
     {{ content }}
-
-   <!--  <div class="share-panel">
+    <div class="share-panel">
       {% if site.theme.show_share_buttons %}
         {% include share-buttons.html %}
       {% endif %}
-    </div>  -->
-  </div>
-  <div class="sidebar">
-    
+    </div> 
   </div>
 </div>
