--- a/_includes/share-buttons.html
+++ b/_includes/share-buttons.html
@@ -3,18 +3,18 @@
   <h5>Share this post on</h5>
   <ul class="social-media">
     <li>
-        <a title="Susanga Video Team on Twitter" 
+        <a title="{{ site.title }} on Twitter" 
           href="https://twitter.com/intent/tweet?original_referer={{site.url}}{{page.url}}&amp;text={{page.title}}&amp;url={{site.url}}{{page.url}}" class="twitter wc-img-replace" target="_blank">
           Twitter
         </a>
     </li>   
     <li>
-        <a title="Susanga Video Team on Google Plus" 
+        <a title="{{ site.title }} on Google Plus" 
             href="https://plus.google.com/share?url={{site.url}}{{page.url}}" 
             class="google wc-img-replace" target="_blank">Google</a>
     </li>
     <li>
-        <a title="Susanga Video Team on Facebook" 
+        <a title="{{ site.title }} on Facebook" 
             href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}&amp;t={{page.title}}" 
             class="facebook wc-img-replace" target="_blank">Facebook</a>
     </li>
